# 2023_CPL_coding_v0.0

./: CMakeLists.txt  README.md
00-Hello/: APlusB.c  CMakeLists.txt  Factorial.c  Guess.c  Hello.c  RoundCalculate.c
01-Lesson1/: AdminScanf.c  Administration.c  CMakeLists.txt  Circle.c  Mol.c  Sphere.c
02-Lesson2/: CMakeLists.txt  Capitalize.c  Enum.c  KnowledgePoint.txt  MathTest.c  TypeTransfer.c
02-Lesson2/array/: ArrayTest.c  CMakeLists.txt  Eratosthenes.c  Matrix.c
03-Lesson3/: CMakeLists.txt
03-Lesson3/caseStructure/: CMakeLists.txt  CompareNumber.c  QuadraticEquation.c  Triangle.c  Weekday.c
03-Lesson3/loop/: CMakeLists.txt  CalculateCar.c  Factorial.c  KnowledgePoint.txt  SeparateNumber.c  Sum.c
04-Lesson4/: BinarySearch.c  BubbleSort.c  CMakeLists.txt  MergeSort.c  QuickSort.c  SelectionSort.c  StraightInsertionSort.c
05-Lesson5/: CMakeLists.txt  Factorial.c  Function.txt  Power.c
06-Lesson6/: Areas.c  CMakeLists.txt  Macro&MoreFuction.txt  Recursion.c
07-Lesson7/: Storage&Operation.txt
08-Lesson8/: ArrayPointer1.c  CMakeLists.txt  Functions.c  Integrate.c  KonwledgePoint.txt  Pointer.txt  Swap.c
09-Lesson9/: CitationType.txt
10-Lesson10/: CMakeLists.txt  Password.c  String.c  String.txt
11-Lesson11/: CMakeLists.txt  Graphs.c  LinkedList.c  Poland.c  Structure.c  Structure.txt
12-Lesson12/: CMakeLists.txt  DoubleLinkedList.c  LinkedList.c  LinkedList.txt
13-Lesson13/: Administrator.c  CMakeLists.txt  File.txt
